Change height on icon section to max-height as using a fixed height meant it wasn't responsive on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,10 +97,10 @@ navbar-toggler {
 
 
 #icons {
-    height: 200px;
+    max-height: 90vh;
     background-color: #a98a90;
     text-align: center;
-    padding-top: 55px;
+    padding: 55px;
 }
 
 i {
@@ -122,3 +122,6 @@ i {
 
 
 /*---- End Icon section */
+
+/*---- History section */
+/*---- End History section */
